--- a/app/src/main/res/drawable/bg_date_today.xml
+++ b/app/src/main/res/drawable/bg_date_today.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#84B0FB"/>
-    <corners android:radius="12dp"/>
+    <solid android:color="#1A73E8"/>
+    <corners android:radius="16dp"/>
 </shape>
