--- a/app/src/main/res/layout/header_main.xml
+++ b/app/src/main/res/layout/header_main.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingVertical="12dp">
+    android:paddingVertical="4dp">
 
     <!-- PROFILE -->
     <com.google.android.material.imageview.ShapeableImageView
@@ -13,13 +13,12 @@
         android:layout_height="48dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_profile"
-        android:background="#0D000000"
         app:shapeAppearanceOverlay="@style/CircleAppearance"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:strokeWidth="1dp"
-        app:strokeColor="#1A000000" />
+        app:strokeColor="@color/card_stroke" />
 
     <!-- GREETING -->
     <LinearLayout
