--- a/app/src/main/res/layout/item_trending_hotstar.xml
+++ b/app/src/main/res/layout/item_trending_hotstar.xml
@@ -3,12 +3,12 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="260dp"
-    android:layout_height="200dp"
-    android:layout_margin="12dp"
-    card_view:cardCornerRadius="18dp"
-    card_view:cardElevation="6dp"
-    card_view:cardBackgroundColor="?attr/colorSurface"
+    android:layout_width="320dp"
+    android:layout_height="160dp"
+    android:layout_margin="8dp"
+    card_view:cardCornerRadius="24dp"
+    card_view:cardElevation="8dp"
+    card_view:cardBackgroundColor="@color/card_dark"
     android:foreground="?attr/selectableItemBackground">
 
     <FrameLayout
